include_directories(
  "${CMAKE_SOURCE_DIR}/src/inclu"
)

add_subdirectory(auxil)
add_subdirectory(beam2)
add_subdirectory(beame)
add_subdirectory(bsq)
add_subdirectory(cont1)
add_subdirectory(cont2)
add_subdirectory(cont3)
add_subdirectory(drawb)
add_subdirectory(ele21)
add_subdirectory(ele22)
add_subdirectory(inclu)
add_subdirectory(input)
add_subdirectory(lbst)
add_subdirectory(loads)
add_subdirectory(mainp)
add_subdirectory(matdb)
add_subdirectory(nbst)
add_subdirectory(prism)
add_subdirectory(quadl)
add_subdirectory(rbst)
add_subdirectory(remesh)
add_subdirectory(rigid)
add_subdirectory(scpr03)
add_subdirectory(shelq)
add_subdirectory(shelt)
add_subdirectory(shrev)
add_subdirectory(solag)
add_subdirectory(solve)
add_subdirectory(spot)
add_subdirectory(sprism)
add_subdirectory(ssolag)
add_subdirectory(tetra)
add_subdirectory(therm)
add_subdirectory(tlbst)
add_subdirectory(tr2d)
add_subdirectory(truss)
add_subdirectory(ttr2d)
