add_library(bsq "")


target_sources(bsq
  PUBLIC
    acvd25.inc
    axep25.inc
    bbra25.inc
    bfle25.inc
    bmem25.inc
    bran25.inc
    comm25.inc
    delt25.inc
    dump25.inc
    ele25_db.f90
    elem25.f90
    elmd25.inc
    gaus25.inc
    inpd25.f90
    luma25.inc
    mase25.inc
    nghb25.inc
    outd25.inc
    rest25.inc
    resv25.inc
    slnods25.inc
    stra25.inc
    surf25.inc
    updl25.inc
)