add_library(cont1 "")


target_sources(cont1
  PUBLIC
    beam_ini.inc
    cdump1.inc
    celmn1.inc
    celmn1p.inc
    chksu1.inc
    chsur1.inc
    cinpu1.inc
    cont1_db.f90
    conta1.f90
    crest1.inc
    cscf1a.inc
    csdat1.inc
    csinp1.inc
    cspin1.inc
    csrfc1.inc
    cupdl1.inc
    force1.inc
    inpco1.inc
    nearst.inc
    projt1.inc
    prsur1.inc
    surms1.inc
    upndc1.inc
)