add_library(mainp "")

add_subdirectory(bak)
add_subdirectory(new)

target_link_libraries(mainp
  PUBLIC
    input
)

target_sources(mainp
  PUBLIC
    actcd.f90
    actrot.f90
    arisfi.f90
    arisi0.f90
    arisin.f90
    beginp.f90
    byebye.f90
    ch_d2v.f90
    chnode.f90
    closef.f90
    cms_db.f90
    conini.f90
    coninp.f90
    contac.f90
    contol.f90
    coords.f90
    coract.f90
    ctrl_db.f90
    curv_db.f90
    damp_db.f90
    dampin.f90
    data_inp.f90
    delnod.f90
    dump_cm.f90
    dumpin.f90
    dump_kc.f90
    dynamic.f90
    elemnt.f90
    elmdat.f90
    endstr.f90
    eqnums.f90
    esets_db.f90
    explit.f90
    export_db.f90
    fixdpd.f90
    fixrfd.f90
    fixsld.f90
    fixva0.f90
    fixval.f90
    functa.f90
    functs.f90
    gvar_db.f90
    histor.f90
    ifx_db.f90
    imcoor.f90
    immtsc.f90
    impfix.f90
    import.f90
    incdlt.f90
    inisld.f90
    initial_comp.f90
    inpdat.f90
    inrotm.f90
    intime.f90
    kinc_db.f90
    kind_param.f90
    line_db.f90
    lumass.f90
    mainpg.f90
    masmtx.f90
    name_db.f90
    nar_db.f90
    ndinf_db.f90
    ndp_db.f90
    nes_db.f90
    newprb.f90
    newstr.f90
    npo_db.f90
    nsets_db.f90
    nsld_db.f90
    nvdamp.f90
    outdyn.f90
    outp_db.f90
    param_db.f90
    predic.f90
    prog_data.f90
    pstatic.f90
    rdconm.f90
    rdcoor.f90
    rdcurv.f90
    rdrfd0.f90
    rdrfdp.f90
    rdsldn.f90
    rdvel0.f90
    rdvelr.f90
    rdvels.f90
    readp0.f90
    readpd.f90
    reasdf.f90
    restar.f90
    rest_cm.f90
    rest_el.f90
    rest_kc.f90
    rfdp_db.f90
    rve_db.f90
    scale_mass.f90
    screin.f90
    slmass.f90
    sms_db.f90
    srtind.f90
    static_db.f90
    surf_db.f90
    sxplit.f90
    timerst.f90
    timing.f90
    timuse.f90
    translate.f90
    trarot.f90
    updlon_kc.f90
    velnpo.f90
    wrtpos.f90
    wrtrpt.f90
)