add_library(mainp "")

add_subdirectory(bak)
add_subdirectory(new)

target_link_libraries(mainp
  PUBLIC
    input
    remesh
    matdb
    beam2
)

target_sources(mainp
  PUBLIC
    actcd.f90
    actrot.f90
    arisfi.f90
    arisfi.h
    arisi0.f90
    arisi0.h
    arisin.f90
    beginp.f90
    byebye.f90
    ch_d2v.f90
    chnode.f90
    closef.f90
    cms_db.f90
    conini.f90
    coninp.f90
    coninp.h
    conta1.h
    conta2.h
    conta3.h
    contac.f90
    contol.f90
    coords.f90
    coract.f90
    coract.h
    ctrl_db.f90
    curv_db.f90
    damp_db.f90
    dampin.f90
    dampin.h
    data_inp.f90
    delnod.f90
    delnod.h
    dump_cm.f90
    dumpin.f90
    dump_kc.f90
    dynamic.f90
    elem04.h
    elem05.h
    elem10.h
    elem11.h
    elem13.h
    elem14.h
    elem15.h
    elem16.h
    elem17.h
    elem18.h
    elem19.h
    elem20.h
    elem21.h
    elem22.h
    elem24.h
    elem25.h
    elemnt.f90
    elemt1.h
    elemt2.h
    elemt6.h
    elemt7.h
    elemt8.h
    elemt9.h
    elmdat.f90
    elmdat.h
    endstr.f90
    endstr.h
    eqnums.f90
    esets_db.f90
    explit.f90
    explit.h
    export_db.f90
    fixdpd.f90
    fixdpd.h
    fixrfd.f90
    fixrfd.h
    fixsld.f90
    fixsld.h
    fixva0.f90
    fixva0.h
    fixval.f90
    fixval.h
    functa.f90
    functs.f90
    gvar_db.f90
    histor.f90
    ifx_db.f90
    imcoor.f90
    imcoor.h
    immtsc.f90
    immtsc.h
    impfix.f90
    import.f90
    incdlt.f90
    inisld.f90
    inisld.h
    initial_comp.f90
    inpd04.h
    inpd05.h
    inpd10.h
    inpd11.h
    inpd13.h
    inpd14.h
    inpd15.h
    inpd16.h
    inpd17.h
    inpd18.h
    inpd19.h
    inpd20.h
    inpd21.h
    inpd22.h
    inpd24.h
    inpd25.h
    inpda1.h
    inpda2.h
    inpda6.h
    inpda7.h
    inpda8.h
    inpda9.h
    inpdat.f90
    inrotm.f90
    intime.f90
    kinc_db.f90
    kind_param.f90
    line_db.f90
    lumass.f90
    mainpg.f90
    masmtx.f90
    name_db.f90
    nar_db.f90
    ndinf_db.f90
    ndp_db.f90
    nes_db.f90
    newprb.f90
    newstr.f90
    npo_db.f90
    nsets_db.f90
    nsld_db.f90
    nvdamp.f90
    nvdamp.h
    outdyn.f90
    outp_db.f90
    param_db.f90
    predic.f90
    predic.h
    prog_data.f90
    pstatic.f90
    rdconm.f90
    rdcoor.f90
    rdcurv.f90
    rdrfd0.f90
    rdrfd0.h
    rdrfdp.f90
    rdsldn.f90
    rdvel0.f90
    rdvel0.h
    rdvelr.f90
    rdvelr.h
    rdvels.f90
    rdvels.h
    readp0.f90
    readp0.h
    readpd.f90
    reasd0.h
    reasdf.f90
    reasdf.h
    restar.f90
    rest_cm.f90
    rest_el.f90
    rest_kc.f90
    rfdp_db.f90
    rve_db.f90
    scale_mass.f90
    screen.h
    screin.f90
    slmass.f90
    sms_db.f90
    srtind.f90
    static_db.f90
    surf_db.f90
    sxplit.f90
    timerst.f90
    timing.f90
    timuse.f90
    translate.f90
    trarot.f90
    updlon_kc.f90
    velnpo.f90
    velnpo.h
    wrtpos.f90
    wrtrpt.f90
)
