add_library(rbst "")

target_sources(rbst
  PUBLIC
    acvd15.inc
    axep15.inc
    bfle15.inc
    bmem15.inc
    comm15.inc
    delt15.inc
    dump15.inc
    ele15_db.f90
    elem15.f90
    elmd15.inc
    elmd15r.inc
    gaus15.inc
    inpd15.f90
    luma15.inc
    mase15.inc
    outd15.inc
    rest15.inc
    resv15.inc
    stra15.inc
    toar15.inc
)
